[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameController.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/pixelbold.tres" type="DynamicFont" id=3]

[node name="Node2D" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Player2" parent="." instance=ExtResource( 2 )]
position = Vector2( -9, -1 )
player_side = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 456.0
margin_top = 14.0
margin_right = 568.0
margin_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
margin_right = 112.0
margin_bottom = 79.0
columns = 3

[node name="LeftScore" type="Label" parent="CenterContainer/GridContainer"]
margin_right = 50.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="ColorRect" type="ColorRect" parent="CenterContainer/GridContainer"]
margin_left = 54.0
margin_right = 58.079
margin_bottom = 79.0
rect_min_size = Vector2( 4.079, 0 )

[node name="RightScore" type="Label" parent="CenterContainer/GridContainer"]
margin_left = 62.0
margin_right = 112.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 3 )
text = "0"
